--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <div class="container-fluid"> 
     <div id="quote">
      <div id="area"> 
-        <p id="words">Quote</p>
-        <p id="author">Author</p>
+        <p id="words" aria-label="Quote">Quote</p>
+        <p id="author" aria-label="Author">Author</p>
      </div>   
       <div class="row">
         <div class="col-xs-6 text-right">
